# EAI4-Project-Fr-Fr

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  init.sh  sync-vscode-config.sh
Data_collection/: Documentation.md  augment.py  bmp_image.cpp  camera_capture.cpp  camera_capture.h  label.py  preprocess.cpp  preprocess.h  preprocess.py  take_picture  take_picture.cpp
artifacts/: model_metrics_75.csv  model_metrics_all.csv  model_metrics_mini.csv  model_metrics_mini_160.csv  multihead-mini-int8.tflite  multihead-mini.tflite  multihead-mini_160-int8.tflite  multihead-mini_160.tflite  multihead1-int8.tflite  multihead1.tflite  multihead_75-int8.tflite  multihead_75.tflite
artifacts/perf/: results_table.csv  results_table.md
documentation/: cpp_documentation_jonas.md  cpp_documentation_lea.md  data_documentation_andrey.md  game_ui_documentation_betttina.md  model_documentation_maria.md
scripts/: build_tflite_runtime.sh  dataloader.py  deploy_to_pi.sh  documentation_maria.md  ensure_tflite_source.sh  labels_7class.txt  labels_condition.txt  labels_gesture.txt  open_pi_console.sh  parse_perf_results.py  provision_pi.sh  rps_fr_fr.service  rps_fr_rf.service  run_on_pi.sh  run_perf_on_pi.sh  train_and_convert.py
src/: RpiCameraCapture.cpp  RpiCameraCapture.hpp  bmp_image.cpp  bmp_image.h  camera_capture.h  consts.h  main.cpp  rps.h  rps_preprocessor.cpp  rps_preprocessor.h  sense_hat_display.cpp  sense_hat_display.h  signs_to_show.h  stb_image_resize2.h  test.cpp  test_preprocess.cpp  tflite_rps_classifier.cpp  tflite_rps_classifier.h
src/Testing/: main.cpp  sense_hat_display.cpp  sense_hat_display.h  sensehat.cpp  sensehat.h
toolchains/: aarch64.cmake
